noinst_HEADERS = \
	abis.h \
	abis_osmo.h \
	bts.h \
	bts_model.h \
	bts_shutdown_fsm.h \
	bts_trx.h \
	gsm_data.h \
	logging.h \
	measurement.h \
	oml.h \
	paging.h \
	rsl.h \
	signal.h \
	vty.h \
	amr.h \
	pcu_if.h \
	pcuif_proto.h \
	handover.h \
	msg_utils.h \
	tx_power.h \
	control_if.h \
	cbch.h \
	l1sap.h \
	power_control.h \
	scheduler.h \
	scheduler_backend.h \
	phy_link.h \
	dtx_dl_amr_fsm.h \
	ta_control.h \
	nm_common_fsm.h \
	$(NULL)
